Ros2_workspace/log/build_2022-05-22_10-59-22/py_pubsub/stderr.log
  File "/home/xilinx/wrkspace/install/py_pubsub/lib/python3.8/site-packages/py_pubsub/subscriber_member_function.py", line 60
    self.avg += (end-start)*1000]
                                ^
SyntaxError: unmatched ']'

